@@ -145,6 +145,7 @@ typedef struct {
   JsGraphicsThemeColor bg2; ///< Accented Background
   JsGraphicsThemeColor fgH; ///< Foreground when highlighted
   JsGraphicsThemeColor bgH; ///< Background when highlighted
+  bool dark; ///< Is background dark (eg. foreground should be a light colour)
 } PACKED_FLAGS JsGraphicsTheme;
 
 /// Global color scheme colours
